# PicoW-BLE-FreeRTOS

./: .gitignore  CMakeLists.txt
lib/lcd/: LCD_Touch.c  LCD_Touch.h
src/: CMakeLists.txt  FreeRTOSConfig.h  client.c  debug.c  debug.h  main.c
